syntax = "proto2";

package buses;

service JustBus {
  rpc Timings(BusStopId) returns (BusTimings) {}
}

message BusStopId {
  required uint32 bus_stop_id = 1;
}

message BusTimings {
  message ArrivalBusService {
    enum Operator {
      SBST = 0;
      SMRT = 1;
      TTS = 2;
      GAS = 3;
    }

    enum BusLoad {
        SeatsAvailable = 0;
        StandingAvailable = 1;
        LimitedStanding = 2;
    }

    enum BusFeature {
      WheelChairAccessible = 0;
    }

    enum BusType {
        SingleDecker = 0;
        DoubleDecker = 1;
        Bendy = 2;
    }

    message NextBus {
      required uint32 origin_code = 1;
      required uint32 dest_code = 2;
      required int64 est_arrival = 3;
      required double lat = 4;
      required double long = 5;
      required uint32 visit_no = 6;
      required BusLoad bus_load = 7;
      optional BusFeature feature = 8;
      required BusType bus_type = 9;
    }

    required string service_no = 1;
    required Operator operator = 2;
    repeated NextBus next_bus = 3;
  }

  repeated ArrivalBusService arrivals = 1;
}

